--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ deps =
     flake8-builtins
     flake8-copyright<6.0.0
     flake8-docstrings>=1.6.0
-    flake8-docstrings-complete>=1.0.3
+    flake8-docstrings-complete>=1.2.0
     flake8-test-docs>=1.0
     isort
     mypy
@@ -52,6 +52,7 @@ deps =
     pytest-asyncio
     pytest-operator
     requests
+    types-mock
     types-PyYAML
     types-requests
     -r{toxinidir}/requirements.txt
@@ -63,17 +64,19 @@ commands =
       --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
       --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg
     # pflake8 wrapper supports config from pyproject.toml
-    pflake8 {[vars]all_path} --ignore=W503
+    # Ignore type checks to allow lazy imports
+    pflake8 {[vars]all_path} --ignore=W503,F821
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
     mypy {[vars]all_path}
-    pylint {[vars]all_path}
+    pylint --extension-pkg-whitelist='lxml,pydantic' {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
 deps =
     coverage[toml]
     pytest
+    mock
     -r{toxinidir}/requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
