--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ envlist = lint, unit, static, coverage-report
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path} {[vars]tst_path}
+lib_path = {toxinidir}/lib/charms/saml_integrator
+all_path = {[vars]src_path} {[vars]tst_path} {[vars]lib_path}
 
 [testenv]
 setenv =
@@ -59,13 +59,15 @@ deps =
 commands =
     pydocstyle {[vars]src_path}
     # uncomment the following line if this charm owns a lib
-    # codespell {[vars]lib_path}
+    codespell {[vars]lib_path}
     codespell {toxinidir} --skip {toxinidir}/.git --skip {toxinidir}/.tox \
       --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
       --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg
     # pflake8 wrapper supports config from pyproject.toml
     # Ignore type checks to allow lazy imports
-    pflake8 {[vars]all_path} --ignore=W503,F821
+    pflake8 {[vars]src_path} {[vars]tst_path} --ignore=W503,F821
+    # Ignore imports not at top of the file
+    pflake8 {[vars]lib_path} --ignore=E402
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
     mypy {[vars]all_path}
@@ -79,7 +81,7 @@ deps =
     mock
     -r{toxinidir}/requirements.txt
 commands =
-    coverage run --source={[vars]src_path} \
+    coverage run --source={[vars]src_path},{[vars]lib_path} \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
     coverage report
 
