Fix test linting (#26)

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ deps =
     flake8-docstrings-complete>=1.2.0
     flake8-test-docs>=1.0
     isort
+    mock
     mypy
     pep8-naming
     pydocstyle>=2.10
@@ -77,8 +78,8 @@ commands =
 description = Run unit tests
 deps =
     coverage[toml]
-    pytest
     mock
+    pytest
     -r{toxinidir}/requirements.txt
 commands =
     coverage run --source={[vars]src_path},{[vars]lib_path} \
