Fix typos and minor doc updates (#46)

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -6,7 +6,7 @@ display-name: SAML Integrator
 summary: SAML Integrator to abstract SAML IdP details.
 description: |
   A [Juju](https://juju.is/) [charm](https://juju.is/docs/olm/charmed-operators)
-  deploying and managing a SAML Integrator on Kubernetes. SAML is an XML-based
+  deploying and managing a SAML Integrator on Kubernetes and bare metal. SAML is an XML-based
   open-standard for transferring identity data between two parties: an identity
   provider (IdP) and a service provider (SP).
 
