--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 [tox]
 skipsdist=True
 skip_missing_interpreters = True
-envlist = lint, unit, static, coverage-report
+envlist = lint, unit, static, interface, coverage-report
 
 [vars]
 src_path = {toxinidir}/src/
@@ -81,7 +81,8 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     coverage run --source={[vars]src_path},{[vars]lib_path} \
-        -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
+        -m pytest --ignore={[vars]tst_path}integration \
+        --ignore={[vars]tst_path}interface -v --tb native -s {posargs}
     coverage report
 
 [testenv:coverage-report]
@@ -101,6 +102,15 @@ deps =
 commands =
     bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
 
+[testenv:interface]
+description = Run unit tests
+deps =
+    pytest
+    ops-scenario>=5.3.1
+    pytest-interface-tester>=1.0.4
+commands =
+    pytest -v --tb native {[vars]tst_path}/interface --log-cli-level=INFO -s {posargs}
+
 [testenv:integration]
 description = Run integration tests
 deps =
@@ -110,7 +120,7 @@ deps =
     pytest-operator
     -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    pytest -v --tb native --ignore={[vars]tst_path}unit --ignore={[vars]tst_path}interface --log-cli-level=INFO -s {posargs}
 
 [testenv:src-docs]
 allowlist_externals=sh
