Keep pytest-interface-tester<2 (#70)
Co-authored-by: arturo-seijas <102022572+arturo-seijas@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -107,7 +107,7 @@ description = Run unit tests
 deps =
     pytest
     ops-scenario>=5.3.1
-    pytest-interface-tester>=1.0.4
+    pytest-interface-tester>=1.0.4,<2
 commands =
     pytest -v --tb native {[vars]tst_path}/interface --log-cli-level=INFO -s {posargs}
 
