Add method to the requirer to retrieve relation data (#77)

--- a/tox.ini
+++ b/tox.ini
@@ -114,7 +114,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    juju==2.9.42.4
+    juju
     pytest
     pytest-asyncio
     pytest-operator
